added reading keys from the secret

--- a/kubernetes-volumes/minio-statefulset.yaml
+++ b/kubernetes-volumes/minio-statefulset.yaml
@@ -18,19 +18,17 @@ spec:
         - name: minio
           env:
             - name: MINIO_ACCESS_KEY
-              value: "minio"
-            #              getting access key from the secret
-            #              valueFrom:
-            #                secretKeyRef:
-            #                  name: minio-secret
-            #                  key: key
-            - name: MINIO_SECRET_KEYd
-              value: "minio123"
-              #              getting access key from the secret
-              #              valueFrom:
-              #                secretKeyRef:
-              #                  name: minio-secret
-              #                  key: secretKey
+                #              value: "minio"
+              valueFrom:
+                secretKeyRef:
+                  name: minio-secret
+                  key: key
+            - name: MINIO_SECRET_KEY
+                #              value: "minio123"
+              valueFrom:
+                secretKeyRef:
+                  name: minio-secret
+                  key: secretKey
           image: minio/minio:RELEASE.2019-07-10T00-34-56Z
           args:
             - server
