--- a/kubernetes-volumes/minio-secret.yaml
+++ b/kubernetes-volumes/minio-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: minio-secret
 type: Opaque
 data:
-  key: bWluaW8K
-  secretKey: bWluaW8xMjMK
+  key: bWluaW8=
+  secretKey: bWluaW8xMjM=
